# gyro-codes

./: .replit  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Component_Design_Chapter_3_Revised_1783855722410.docx  Pasted--2026-07-05T00-17-49-534Z-gyro-Starting-API-server-http_1783211357847.txt  Pasted--Executing-task-C-Users-mweny-platformio-penv-Scripts-p_1781533114833.txt  Pasted--Executing-task-C-Users-mweny-platformio-penv-Scripts-p_1781534577450.txt  Pasted--Executing-task-C-Users-mweny-platformio-penv-Scripts-p_1781717613986.txt  Pasted--Executing-task-C-Users-mweny-platformio-penv-Scripts-p_1783007995918.txt  Pasted--Executing-task-C-Users-mweny-platformio-penv-Scripts-p_1783796237131.txt  Pasted--PHASE-0-TEST-1780861187118_1780861187120.txt  Pasted--PHASE-0-TEST-1780942045263_1780942045265.txt  Pasted--Processing-esp32doit-devkit-v1-platform-espressif32-bo_1781538821071.txt  Pasted--Processing-esp32doit-devkit-v1-platform-espressif32-bo_1783007355099.txt  Pasted--Terminal-on-COM4-115200-8-N-1-Available-filters-and-te_1781533919658.txt  Pasted--Terminal-on-COM4-115200-8-N-1-Available-filters-and-te_1781535028764.txt  Pasted--Terminal-on-COM6-115200-8-N-1-Available-filters-and-te_1781720635301.txt  Pasted--Terminal-on-COM6-115200-8-N-1-Available-filters-and-te_1783204798401.txt  Pasted--Terminal-on-COM6-115200-8-N-1-Available-filters-and-te_1783644367426.txt  Pasted--What-to-tell-the-Replit-agent-Tell-the-agent-to-fix-th_1780955019013.txt  (+31 more)
desktop/: .gitignore  README.md  package.json  (+1 more)
(+150 files in other folders)
