[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.7",
    "pdf2docx>=0.5.13",
    "plotly>=6.8.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
